--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>abhishek</title>
     <link rel="stylesheet" href="styles/css/style.css">
-    <link rel="icon" href="images/Aicon.ico.ico">
+    <link rel="icon" href="image1/images/Aicon.ico.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   </head>
   <body>
