--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <body>
 
   <div class="top-container">
-    <img class="top-cloud" src="images1/images/cloud.png" alt="cloud">
+    <img class="top-cloud" src="image1/images/cloud.png" alt="cloud">
     <h1><b>I'm ABHISHEK</b></h1>
 <p><h2>
 a <span class="span">pro</span>grammer</h2> </p>
 
-    <img class="bottom-cloud" src="images1/images/cloud.png" alt="cloud">
-    <img class="mount" src="images1/images/mountain.png" alt="mountain">
+    <img class="bottom-cloud" src="image1/images/cloud.png" alt="cloud">
+    <img class="mount" src="image1/images/mountain.png" alt="mountain">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="abh2img" src="images1/images/abh1.jpg" alt="abhishek jaswal" height="170px" width="170px">
+      <img class="abh2img" src="image1/images/abh1.jpg" alt="abhishek jaswal" height="170px" width="170px">
       <h2>Hello.</h2>
       <p class="intro">I am a budding Engineer i'm pursuing my Bachelor of technology degree in computer science.I am 20 years old and a budding web developer.</p>
 
@@ -30,14 +30,14 @@ a <span class="span">pro</span>grammer</h2> </p>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="codeimg" src="images1/images/computer.png" alt="" >
+        <img class="codeimg" src="image1/images/computer.png" alt="" >
         <h3 class="interests">Design & Development</h3>
         <p class="parainterests">Coding is life and i love to code .</p><p>
           I have learnt multiple programming languages some of them are java,python,c++,c,html,javascript.
         </p>
         </div>
           <div class="skill-row">
-        <img class="gamepadimg" src="images1/images/gamepad.png" alt="gamepad" >
+        <img class="gamepadimg" src="image1/images/gamepad.png" alt="gamepad" >
         <h3 class="interests">Games</h3>
         <p class="parainterests">i love to play games whether it is outdoor or indoor or any pc or mobile game. Some of my favourite mobile games are Pubg mobile,Asphalt 8 etc. And my favourite pc games are GTA 5,Blur etc.</p>
         </div>
